2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Introduce an extension-by-mutable-image morpher.

	* mln/core/image/dmorph/mutable_extension_ima.hh: New.
	* headers.mk: Regen.

2010-09-20  Roland Levillain  <roland@lrde.epita.fr>

	Get the `detach' argument of thinning algorithms by reference.

	* mln/topo/skeleton/breadth_first_thinning.hh
	(topo::skeleton::breadth_first_thinning)
	* mln/topo/skeleton/priority_driven_thinning.hh
	(topo::skeleton::priority_driven_thinning):
	Here.

2010-09-19  Roland Levillain  <roland@lrde.epita.fr>

	Get rid of intermediate psites in thinning algorithms.

	* mln/topo/skeleton/breadth_first_thinning.hh,
	* mln/topo/skeleton/priority_driven_thinning.hh:
	Here.

2010-09-19  Roland Levillain  <roland@lrde.epita.fr>

	Have topo::is_n_face take a psite type as class parameter.

	* mln/topo/is_n_face.hh: Here, so that the argument of this
	functor (e.g., an iterator) is always converted to the psite
	type.
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-skel.cc:
	Adjust.

2010-09-17  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in thinning algorithms.

	* mln/topo/skeleton/breadth_first_thinning.hh: Remove a comment.
	* mln/topo/skeleton/priority_driven_thinning.hh: Likewise.
	Rename p_queue to queue to avoid confusions with mln::p_queue and
	improve uniformity w.r.t. topo::breadth_first_thinning.

2010-09-17  Roland Levillain  <roland@lrde.epita.fr>

	Fix the processing order in topo::breadth_first_thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Use a p_queue_fast
	site set instead of a pair of p_set's to ensure an actual
	breadth-first processing of sites.

2010-09-16  Roland Levillain  <roland@lrde.epita.fr>

	Split interface and implementation of topo::is_not_end_point.

	* mln/topo/is_not_end_point.hh: Here.

2010-09-15  Roland Levillain  <roland@lrde.epita.fr>
